# ai-judger

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: judge.py  logging_config.py  main.py  models.py  video.py
backend/: config.py  judge.py  main.py  middleware.py  video.py
frontend/: Dockerfile  app.js  index.html  nginx.conf  style.css
tests/: test_config.py  test_judge.py
